--- a/app/templates/_base_page.html
+++ b/app/templates/_base_page.html
@@ -4,6 +4,17 @@
 
 {% from "components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
 {% from "components/button/macro.njk" import govukButton %}
+{% from "components/phase-banner/macro.njk" import govukPhaseBanner %}
+
+
+{# This can be removed once we start using govuk-frontend template #}
+{# The reason calling this block here is to change the header title so that it does not
+   include the phase tag #}
+{% block inside_header %}
+  <div class="header-title">
+    <a href="/">Digital Marketplace</a>
+  </div>
+{% endblock %}
 
 
 {# TODO: Remove once we start removing govuk_template, GOV.UK Frontend template uses pageTitle #}
@@ -14,6 +25,12 @@
   {% block top_header %}{% endblock %}
   <div id="wrapper">
     {% block beforeContent %}
+      {{ govukPhaseBanner({
+        "tag": {
+          "text": "beta"
+        },
+        "html": 'Help us improve the Digital Marketplace - <a class="govuk-link" href="'  + url_for('external.help') + '">send your feedback</a>'
+      }) }}
       {% block breadcrumb %}{% endblock %}
     {% endblock %}
     <main id="content" role="main">
