--- a/app/templates/_base_page.html
+++ b/app/templates/_base_page.html
@@ -6,8 +6,10 @@
 {% from "components/button/macro.njk" import govukButton %}
 {% from "components/phase-banner/macro.njk" import govukPhaseBanner %}
 
+{# TODO: Remove once we start removing govuk_template, GOV.UK Frontend template uses pageTitle #}
+{% block page_title %}{% block pageTitle %}{% endblock %}{% endblock %}
 
-{# This can be removed once we start using govuk-frontend template #}
+{# TODO: This can be removed once we start using govuk-frontend template #}
 {# The reason calling this block here is to change the header title so that it does not
    include the phase tag #}
 {% block inside_header %}
@@ -16,9 +18,10 @@
   </div>
 {% endblock %}
 
-
-{# TODO: Remove once we start removing govuk_template, GOV.UK Frontend template uses pageTitle #}
-{% block page_title %}{% block pageTitle %}{% endblock %}{% endblock %}
+{# TODO: This can be removed once we start using govuk-frontend template #}
+{# The reason for calling this is to ensure we do not output the user research signup banner #}
+{% block after_header %}
+{% endblock %}
 
 {# override content block to add a beforeContent block like the one in govuk-frontend template #}
 {% block content %}
