switch grid elements to digitalmarketplace-govuk-frontend's classes

--- a/app/templates/auth/change-password.html
+++ b/app/templates/auth/change-password.html
@@ -25,8 +25,8 @@
 
 <form autocomplete="off" action="{{ url_for('.change_password') }}" method="POST">
 
-    <div class="grid-row">
-        <div class="column-two-thirds">
+    <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
             {{ form.hidden_tag() }}
 
             {% with question = form.old_password.label,
