--- a/app/templates/auth/create-user.html
+++ b/app/templates/auth/create-user.html
@@ -22,8 +22,8 @@
 
     <form autocomplete="off" action="{{ url_for('.submit_create_user', encoded_token=token) }}" method="POST" id="createUserForm">
 
-        <div class="grid-row">
-            <div class="column-two-thirds">
+        <div class="govuk-grid-row">
+            <div class="govuk-grid-column-two-thirds">
                 {{ form.hidden_tag() }}
   
                 {% with question = form.name.label,
