--- a/app/templates/auth/create-user-error.html
+++ b/app/templates/auth/create-user-error.html
@@ -8,8 +8,8 @@
 
 {% if error == 'invalid_buyer_domain' %}
 
-  <div class="grid-row">
-    <div class="column-two-thirds error-page">
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds error-page">
       <h1 class="govuk-heading-l">You must use a public sector email address</h1>
       <p class="govuk-body">
         You must be employed by, or represent, a public sector organisation to create a buyer account.
