--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -23,8 +23,8 @@
 <h1 class="govuk-heading-xl">Log in to the Digital Marketplace</h1>
 
 <form autocomplete="off" action="{{ url_for('.process_login', next=next) }}" method="POST">
-    <div class="grid-row">
-        <div class="column-two-thirds">
+    <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
 
             {{ form.hidden_tag() }}
   
