--- a/app/templates/auth/reset-password.html
+++ b/app/templates/auth/reset-password.html
@@ -27,8 +27,8 @@
 
 <form autocomplete="off" action="{{ url_for('.update_password', token=token) }}" method="POST">
 
-    <div class="grid-row">
-        <div class="column-two-thirds">
+    <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
             {{ form.hidden_tag() }}
             
             {% with question = form.password.label,
