--- a/app/templates/notifications/user-research-consent.html
+++ b/app/templates/notifications/user-research-consent.html
@@ -20,10 +20,10 @@
 
 {% block main_content %}
 
-<div class="grid-row notification-user-research">
+<div class="govuk-grid-row notification-user-research">
   {% include 'toolkit/forms/validation.html' %}
 
-  <div class="column-two-thirds">
+  <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl">
     {% if form.user_research_opt_in.data %}
       Unsubscribe from the user research mailing list
