replace page_title block with pageTitle
As part of migrating us off govuk_template and on to govuk frontend template
we need to be mindful about what blocks govuk frontend used. govuk frontend
template uses pageTitle so instead of adding this commit to that work it
can be done as a separate commit and then once we come to replace govuk_template
we can just remove the two lines of code in `_base_page` which we added
in this commit.

--- a/app/templates/auth/create-user-error.html
+++ b/app/templates/auth/create-user-error.html
@@ -1,6 +1,6 @@
 {% extends "_base_page.html" %}
 
-{% block page_title %}
+{% block pageTitle %}
   {% if role == 'supplier' %}Create contributor account{% else %}Create account error{% endif %} - Digital Marketplace
 {% endblock %}
 
