--- a/app/templates/auth/create-user.html
+++ b/app/templates/auth/create-user.html
@@ -1,6 +1,6 @@
 {% extends "_base_page.html" %}
 
-{% block page_title %}
+{% block pageTitle %}
   Create account – Digital Marketplace
 {% endblock %}
 
