--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,6 +1,8 @@
 {% extends "_base_page.html" %}
 
-{% block page_title %}Log in – Digital Marketplace{% endblock %}
+{% block pageTitle %}
+  Log in – Digital Marketplace
+{% endblock %}
 
 {% block breadcrumb %}
   {{ govukBreadcrumbs({"items": [
