--- a/app/templates/auth/reset-password.html
+++ b/app/templates/auth/reset-password.html
@@ -1,6 +1,8 @@
 {% extends "_base_page.html" %}
 
-{% block page_title %}Reset password – Digital Marketplace{% endblock %}
+{% block pageTitle %}
+  Reset password – Digital Marketplace
+{% endblock %}
 
 {% block breadcrumb %}
   {{ govukBreadcrumbs({"items": [
