--- a/app/templates/notifications/user-research-consent.html
+++ b/app/templates/notifications/user-research-consent.html
@@ -1,6 +1,8 @@
 {% extends "_base_page.html" %}
 
-{% block page_title %}User reserch notification – Digital Marketplace{% endblock %}
+{% block pageTitle %}
+  User reserch notification – Digital Marketplace
+{% endblock %}
 
 {% block breadcrumb %}
   {{ govukBreadcrumbs({"items": [
