replace main_content block with mainContent
As part of migrating us off govuk_template and on to govuk frontend template
we need to be mindful about what blocks govuk frontend uses. govuk frontend
template uses content block so instead of adding this commit to that work it
can be done as a separate commit and then once we come to replace govuk_template
we can just remove the `main_content` block of code and leave mainContent block in `_base_page`.
We will need to output flash messaging inside the content block so we cannot just use govuk-frontend template's `content` block to render our page.

--- a/app/templates/auth/change-password.html
+++ b/app/templates/auth/change-password.html
@@ -20,7 +20,7 @@
   ]}) }}
 {% endblock %}
 
-{% block main_content %}
+{% block mainContent %}
   {% include 'toolkit/forms/validation.html' %}
 
   <h1 class="govuk-heading-xl">Change your password</h1>
