--- a/app/templates/auth/create-user-error.html
+++ b/app/templates/auth/create-user-error.html
@@ -4,7 +4,7 @@
   {% if role == 'supplier' %}Create contributor account{% else %}Create account error{% endif %} - Digital Marketplace
 {% endblock %}
 
-{% block main_content %}
+{% block mainContent %}
 
   {% if error == 'invalid_buyer_domain' %}
 
