--- a/app/templates/auth/create-user.html
+++ b/app/templates/auth/create-user.html
@@ -4,7 +4,7 @@
   Create account – Digital Marketplace
 {% endblock %}
 
-{% block main_content %}
+{% block mainContent %}
 
   {% with lede = "There was a problem with the details you gave for:" %}
     {% include 'toolkit/forms/validation.html' %}
