--- a/app/templates/notifications/user-research-consent.html
+++ b/app/templates/notifications/user-research-consent.html
@@ -20,7 +20,7 @@
   ]}) }}
 {% endblock %}
 
-{% block main_content %}
+{% block mainContent %}
 
   <div class="govuk-grid-row notification-user-research">
     {% include 'toolkit/forms/validation.html' %}
