--- a/app/templates/_base_page.html
+++ b/app/templates/_base_page.html
@@ -18,7 +18,10 @@
     {% endblock %}
     <main id="content" role="main">
       {% include "toolkit/flash_messages.html" %}
+      {# TODO: Remove this block when we start removing govuk_template but be sure #}
+      {#       To keep the inner block mainContent otherwise no content will be rendered #}
       {% block main_content %}
+        {% block mainContent %}{% endblock %}
       {% endblock %}
     </main>
   </div>
