--- a/app/templates/auth/request-password-reset.html
+++ b/app/templates/auth/request-password-reset.html
@@ -20,7 +20,7 @@
   ]}) }}
 {% endblock %}
 
-{% block main_content %}
+{% block mainContent %}
 
   {% with lede = "There was a problem with the details you gave for:" %}
     {% include 'toolkit/forms/validation.html' %}
