--- a/app/templates/auth/reset-password.html
+++ b/app/templates/auth/reset-password.html
@@ -16,7 +16,7 @@
   ]}) }}
 {% endblock %}
 
-{% block main_content %}
+{% block mainContent %}
   {% with lede = "There was a problem with the details you gave for:" %}
     {% include "toolkit/forms/validation.html" %}
   {% endwith %}
