Replace textboxes with GOV.UK Frontend text input component
We should be able to use `govuk-frontend` input component. This
replaces `digitalmarketplace-frontend-toolkit` textbox component.

We still need to decide whether we still want to have bold and slightly
larger labels compared to govuk-frontend default.

--- a/app/templates/_base_page.html
+++ b/app/templates/_base_page.html
@@ -5,6 +5,8 @@
 {% from "components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
 {% from "components/button/macro.njk" import govukButton %}
 {% from "components/error-summary/macro.njk" import govukErrorSummary %}
+{% from "components/input/macro.njk" import govukInput %}
+
 
 {# TODO: Remove once we start removing govuk_template, GOV.UK Frontend template uses pageTitle #}
 {% block page_title %}{% block pageTitle %}{% endblock %}{% endblock %}
