--- a/app/templates/auth/change-password.html
+++ b/app/templates/auth/change-password.html
@@ -29,36 +29,48 @@
       <div class="govuk-grid-column-two-thirds">
         {{ form.hidden_tag() }}
 
-        {% with question = form.old_password.label,
-                name = "old_password",
-                error = errors.get('old_password', {}).get('message'),
-                value = form.old_password.data,
-                type = "password",
-                autocomplete = "off"
-        %}
-          {% include "toolkit/forms/textbox.html" %}
-        {% endwith %}
+        {{ govukInput({
+          "label": {
+            "text": form.old_password.label.text,
+          },
+          "errorMessage": errors.old_password.errorMessage,
+          "id": "input-old_password",
+          "type": "password",
+          "name": "old_password",
+          "value": form.old_password.data,
+          "attributes": {
+            "autocomplete": "off",
+          },
+        }) }}
 
-        {% with question = form.password.label,
-                name = "password",
-                error = errors.get('password', {}).get('message'),
-                hint = form.password.hint,
-                value = form.password.data,
-                type = "password",
-                autocomplete = "off"
-        %}
-          {% include "toolkit/forms/textbox.html" %}
-        {% endwith %}
+        {{ govukInput({
+          "label": {
+            "text": form.password.label.text,
+          },
+          "errorMessage": errors.password.errorMessage,
+          "id": "input-password",
+          "type": "password",
+          "name": "password",
+          "value": form.password.data,
+          "attributes": {
+            "autocomplete": "off",
+          },
+        }) }}
 
-        {% with question = form.confirm_password.label,
-                name = "confirm_password",
-                error = errors.get('confirm_password', {}).get('message'),
-                value = form.confirm_password.data,
-                type = "password",
-                autocomplete = "off"
-        %}
-          {% include "toolkit/forms/textbox.html" %}
-        {% endwith %}
+
+        {{ govukInput({
+          "label": {
+            "text": form.confirm_password.label.text,
+          },
+          "errorMessage": errors.confirm_password.errorMessage,
+          "id": "input-confirm_password",
+          "type": "password",
+          "name": "confirm_password",
+          "value": form.confirm_password.data,
+          "attributes": {
+            "autocomplete": "off",
+          },
+        }) }}
 
         {{ govukButton({
           "text": "Save changes"
