--- a/app/templates/auth/reset-password.html
+++ b/app/templates/auth/reset-password.html
@@ -29,24 +29,36 @@
       <div class="govuk-grid-column-two-thirds">
         {{ form.hidden_tag() }}
 
-        {% with question = form.password.label,
-                name = "password",
-                error = errors.get('password', {}).get('message'),
-                hint = form.password.hint,
-                value = form.password.data,
-                type = "password"
-        %}
-          {% include "toolkit/forms/textbox.html" %}
-        {% endwith %}
+        {{ govukInput({
+          "label": {
+            "text": form.password.label.text,
+          },
+          "hint": {
+            "text": form.password.hint,
+          },
+          "errorMessage": errors.password.errorMessage,
+          "id": "input-password",
+          "type": "password",
+          "name": "password",
+          "value": form.password.data,
+          "attributes": {
+            "autocomplete": "off",
+          },
+        }) }}
 
-        {% with question = form.confirm_password.label,
-                name = "confirm_password",
-                error = errors.get('confirm_password', {}).get('message'),
-                value = form.confirm_password.data,
-                type = "password"
-        %}
-          {% include "toolkit/forms/textbox.html" %}
-        {% endwith %}
+        {{ govukInput({
+          "label": {
+            "text": form.confirm_password.label.text,
+          },
+          "errorMessage": errors.confirm_password.errorMessage,
+          "id": "input-confirm_password",
+          "type": "password",
+          "name": "confirm_password",
+          "value": form.confirm_password.data,
+          "attributes": {
+            "autocomplete": "off",
+          },
+        }) }}
 
         {{ govukButton({
           "text": "Reset password"
