--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -24,24 +24,36 @@
       <div class="govuk-grid-column-two-thirds">
         {{ form.hidden_tag() }}
 
-        {% with question = form.email_address.label,
-                name = "email_address",
-                error = errors.get('email_address', {}).get('message'),
-                hint = form.email_address.hint,
-                value = form.email_address.data,
-                autocomplete = "off"
-        %}
-          {% include "toolkit/forms/textbox.html" %}
-        {% endwith %}
+        {{ govukInput({
+          "label": {
+            "text": form.email_address.label.text,
+          },
+          "hint": {
+            "text": form.email_address.hint,
+          },
+          "errorMessage": errors.email_address.errorMessage,
+          "id": "input-email_address",
+          "name": "email_address",
+          "value": form.email_address.data,
+          "attributes": {
+            "autocomplete": "off",
+          },
+        }) }}
 
-        {% with question = form.password.label,
-                name = "password",
-                error = errors.get('password', {}).get('message'),
-                value = form.password.data,
-                type = "password"
-        %}
-          {% include "toolkit/forms/textbox.html" %}
-        {% endwith %}
+        {{ govukInput({
+          "label": {
+            "text": form.password.label.text,
+          },
+          "errorMessage": errors.password.errorMessage,
+          "id": "input-password",
+          "type": "password",
+          "name": "password",
+          "value": form.password.data,
+          "attributes": {
+            "autocomplete": "off",
+          },
+        }) }}
+
 
         {%
           with
