--- a/app/templates/auth/request-password-reset.html
+++ b/app/templates/auth/request-password-reset.html
@@ -33,15 +33,21 @@
       <div class="govuk-grid-column-two-thirds">
         {{ form.hidden_tag() }}
 
-        {% with question = form.email_address.label,
-                name = "email_address",
-                error = errors.get('email_address', {}).get('message'),
-                hint = form.email_address.hint,
-                value = form.email_address.data,
-                autocomplete = "off"
-        %}
-          {% include "toolkit/forms/textbox.html" %}
-        {% endwith %}
+        {{ govukInput({
+          "label": {
+            "text": form.email_address.label.text,
+          },
+          "hint": {
+            "text": form.email_address.hint,
+          },
+          "errorMessage": errors.email_address.errorMessage,
+          "id": "input-email_address",
+          "name": "email_address",
+          "value": form.email_address.data,
+          "attributes": {
+            "autocomplete": "off",
+          },
+        }) }}
 
         {{ govukButton({
           "text": "Send reset email"
