Make it easier for users to enter a valid email address
Adds HTML attributes `type="email"` and `spellcheck="false"`  as
suggested by GOV.UK Design System guidance on asking users for email
addresses[[1]].

[[1]]: https://design-system.service.gov.uk/patterns/email-addresses/#help-users-to-enter-a-valid-email-address

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -33,10 +33,12 @@
           },
           "errorMessage": errors.email_address.errorMessage,
           "id": "input-email_address",
+          "type": "email",
           "name": "email_address",
           "value": form.email_address.data,
           "attributes": {
             "autocomplete": "off",
+            "spellcheck": "false",
           },
         }) }}
 
