--- a/app/templates/auth/request-password-reset.html
+++ b/app/templates/auth/request-password-reset.html
@@ -42,10 +42,12 @@
           },
           "errorMessage": errors.email_address.errorMessage,
           "id": "input-email_address",
+          "type": "email",
           "name": "email_address",
           "value": form.email_address.data,
           "attributes": {
             "autocomplete": "off",
+            "spellcheck": "false",
           },
         }) }}
 
