--- a/app/templates/auth/request-password-reset.html
+++ b/app/templates/auth/request-password-reset.html
@@ -28,7 +28,7 @@
     password. Password reset links are only valid for 24 hours.
   </p>
 
-  <form autocomplete="off" action="{{ url_for('.request_password_reset') }}" method="POST" id="resetPasswordForm">
+  <form action="{{ url_for('.request_password_reset') }}" method="POST" id="resetPasswordForm">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         {{ form.hidden_tag() }}
@@ -46,7 +46,7 @@
           "name": "email_address",
           "value": form.email_address.data,
           "attributes": {
-            "autocomplete": "off",
+            "autocomplete": "username",
             "spellcheck": "false",
           },
         }) }}
