--- a/app/templates/auth/change-password.html
+++ b/app/templates/auth/change-password.html
@@ -24,7 +24,7 @@
 
   <h1 class="govuk-heading-xl">Change your password</h1>
 
-  <form autocomplete="off" action="{{ url_for('.change_password') }}" method="POST">
+  <form action="{{ url_for('.change_password') }}" method="POST">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         {{ form.hidden_tag() }}
@@ -39,7 +39,7 @@
           "name": "old_password",
           "value": form.old_password.data,
           "attributes": {
-            "autocomplete": "off",
+            "autocomplete": "current-password",
           },
         }) }}
 
@@ -53,7 +53,7 @@
           "name": "password",
           "value": form.password.data,
           "attributes": {
-            "autocomplete": "off",
+            "autocomplete": "new-password",
           },
         }) }}
 
@@ -68,7 +68,7 @@
           "name": "confirm_password",
           "value": form.confirm_password.data,
           "attributes": {
-            "autocomplete": "off",
+            "autocomplete": "new-password",
           },
         }) }}
 
