--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -19,7 +19,7 @@
 {% block mainContent %}
   <h1 class="govuk-heading-xl">Log in to the Digital Marketplace</h1>
 
-  <form autocomplete="off" action="{{ url_for('.process_login', next=next) }}" method="POST">
+  <form action="{{ url_for('.process_login', next=next) }}" method="POST">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         {{ form.hidden_tag() }}
@@ -37,7 +37,7 @@
           "name": "email_address",
           "value": form.email_address.data,
           "attributes": {
-            "autocomplete": "off",
+            "autocomplete": "username",
             "spellcheck": "false",
           },
         }) }}
@@ -52,7 +52,7 @@
           "name": "password",
           "value": form.password.data,
           "attributes": {
-            "autocomplete": "off",
+            "autocomplete": "current-password",
           },
         }) }}
 
