--- a/app/templates/auth/reset-password.html
+++ b/app/templates/auth/reset-password.html
@@ -24,7 +24,7 @@
     Reset password for {{ email_address }}
   </p>
 
-  <form autocomplete="off" action="{{ url_for('.update_password', token=token) }}" method="POST">
+  <form action="{{ url_for('.update_password', token=token) }}" method="POST">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         {{ form.hidden_tag() }}
@@ -42,7 +42,7 @@
           "name": "password",
           "value": form.password.data,
           "attributes": {
-            "autocomplete": "off",
+            "autocomplete": "new-password",
           },
         }) }}
 
@@ -56,7 +56,7 @@
           "name": "confirm_password",
           "value": form.confirm_password.data,
           "attributes": {
-            "autocomplete": "off",
+            "autocomplete": "new-password",
           },
         }) }}
 
