--- a/app/assets/scss/application.scss
+++ b/app/assets/scss/application.scss
@@ -18,6 +18,7 @@ $path: "/user/static/images/";
 
 // Digital Marketplace Front-end toolkit styles (only import the files you need)
 @import "toolkit/_breadcrumb.scss";
+@import "toolkit/_footer.scss";
 @import "toolkit/_grids.scss";
 @import "toolkit/_notification-banners.scss";
 @import "toolkit/_phase-banner.scss";
@@ -39,7 +40,6 @@ $govuk-compatibility-govukelements: true;
 @import "node_modules/digitalmarketplace-govuk-frontend/govuk-frontend/all";
 
 // App specific styles
-@import "_footer.scss";
 @import "_text.scss";
 @import "_secondary-action-link.scss";
 
