--- a/app/assets/scss/application.scss
+++ b/app/assets/scss/application.scss
@@ -31,7 +31,7 @@ $path: "/user/static/images/";
 
 // GOV.UK Design System (compatible with old toolkit/elements)
 $govuk-assets-path: '/user/static/';
-$govuk-images-path: '/user/static/images/govuk-frontend/';
+$govuk-images-path: '/user/static/images/';
 $govuk-fonts-path: '/user/static/fonts/';
 $govuk-compatibility-govukfrontendtoolkit: true;
 $govuk-compatibility-govuktemplate: true;
