--- a/app/templates/_base_page.html
+++ b/app/templates/_base_page.html
@@ -7,11 +7,13 @@
 {% from "govuk-frontend/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "govuk-frontend/components/input/macro.njk" import govukInput %}
 {% from "govuk-frontend/components/phase-banner/macro.njk" import govukPhaseBanner %}
+{% from "govuk-frontend/components/radios/macro.njk" import govukRadios %}
 
 
 {# Import DM Components #}
-{% from "digitalmarketplace/components/header/macro.njk" import dmHeader%}
-{% from "digitalmarketplace/components/footer/macro.njk" import dmFooter%}
+{% from "digitalmarketplace/components/header/macro.njk" import dmHeader %}
+{% from "digitalmarketplace/components/footer/macro.njk" import dmFooter %}
+{% from "digitalmarketplace/components/alert/macro.njk" import dmAlert %}
 
 {% set assetPath = '/user/static' %}
 
