Remove unused govspeak

--- a/app/templates/cookies/cookie_settings.html
+++ b/app/templates/cookies/cookie_settings.html
@@ -60,14 +60,12 @@
 
       <h2 class="govuk-heading-l">Cookie settings</h2>
       <div class="dm-cookie-settings__no-js">
-        <div class="govuk-govspeak">
-          <p>We use Javascript to set most of our cookies.
-            Unfortunately Javascript is not running on your browser, so you cannot change your settings. You can try:</p>
-          <ul class="govuk-list">
-            <li>reloading the page</li>
-            <li>turning on Javascript in your browser</li>
-          </ul>
-        </div>
+        <p class="govuk-body">We use Javascript to set most of our cookies.
+          Unfortunately Javascript is not running on your browser, so you cannot change your settings. You can try:</p>
+        <ul class="govuk-list">
+          <li>reloading the page</li>
+          <li>turning on Javascript in your browser</li>
+        </ul>
       </div>
 
       <div class="dm-cookie-settings__form-wrapper">
