add link to error summary box

--- a/app/templates/cookies/cookie_settings.html
+++ b/app/templates/cookies/cookie_settings.html
@@ -25,7 +25,11 @@
     "type": "error",
     "classes": "dm-cookie-settings__error",
     "titleText": "There was a problem saving your settings",
-    "text": "Please select 'Yes' or 'No'.",
+    "html": '<ul class="govuk-list govuk-error-summary__list">
+      <li>
+        <a href="#dm-cookie-settings">Please select \'Yes\' or \'No\'.</a>
+      </li>
+    </ul>',
     "attributes": [("id", "dm-cookie-settings-error")]
   }) }}
 
